<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RoKka</string>

    <string name="mainInstruction">Click to add new member</string>
    <string name="mainInstructionB">Select Language</string>




    <string name="alertboxTitle">: Delete?</string>
    <string name="alertboxLine">" Are you sure you want to delete this?"</string>
    <string name="alertboxYes">Yes</string>
    <string name="alertboxToast">Deleted</string>
    <string name="alertboxNo">No</string>
    <string name="addMTitle">Add New Name</string>
    <string name="addMName">Enter Name</string>
    <string name="addMBal">Enter Initial Balance</string>
    <string name="addMBtn">Add</string>
    <string name="addMAlertA">The name should not contain this (\", \')</string>
    <string name="addMAlertB">Enter different name</string>


    <string name="detTitle">"Name : "</string>
    <string name="detDays">"Days (Full / Half) : "</string>
    <string name="detGiven">"Paid : "</string>
    <string name="detRem">"Remaining : "</string>
    <string name="detTotal">"Total Wage : "</string>
    <string name="detAlertboxTitle">Delete?</string>
    <string name="detStatusPositive">PAID</string>
    <string name="detStatusNegative">PENDING</string>
    <string name="detUpdate">Updated Successfully</string>

    <string name="plusFulldays">Full Days</string>
    <string name="plushalfdays">Half Days</string>
    <string name="plusFullPerday">Wage/Day</string>
    <string name="plusHalfPerday">Wage/Halfday</string>
    <string name="plusGiven">Paid Wage</string>
    <string name="plusNote">Note</string>
    <string name="plusBtn">Submit</string>
    <string name="plusTitle">\'s Pay</string>

    <string name="plusAlertA">Enter full days / wages</string>
    <string name="plusAlertB">Enter halfdays / wages</string>
    <string name="plusAlertC">Fill the input fields</string>
    <string name="plusAlertD">Enter Wage Paid</string>
    <string name="plusTextGiven">"Remaining Wage : "</string>
    <string name="detInstruction">" Transactions are shown here"</string>

<!--    Home Activity-->
    <string name="hAlabours">Labours</string>
    <string name="hAlentBorrow">Lent/Borrow</string>
    <string name="hAexpense">Expense</string>

<!--    titles-->
    <string name="tDetails">Details</string>
    <string name="tAddNewRecord">Add new record</string>

    <!--    OthersActivity-->

    <string name="oAddNewTitle">Add New Member</string>

    <string name="oPlusTitle">- Lent</string>
    <string name="oMinusTitle">- Borrow</string>
    <string name="oPlusAmt">Enter Amount</string>
    <string name="oPlusBtn">Add</string>
    <string name="oPlusToastTrue">Added Successfully</string>
    <string name="oPlusToastFalse">Subtracted Successfully</string>

    <string name="oDetailsAmount">Amount:\u0020</string>
    <string name="oDetailsBalance">Balance:\u0020</string>
    <string name="oDetailsNote">Note:\u0020</string>

    <string name="oAlert">Enter Amount</string>

<!--    Expense Activity-->
    <string name="epTitle">Add New Expense</string>
    <string name="eAlertTitle">Delete?</string>
    <string name="eIntruction">Click to add new expense</string>

<!--    Menu-->
    <string name="menuhelp">Help</string>
    <string name="menuaboutus">About Us</string>

<!--    Filter-->
    <string name="fToday">Today</string>
    <string name="fThisMonth">This Month</string>
    <string name="fThisYear">This Year</string>
    <string name="fAll">All</string>


    <string name="initialBal">Initial Balance</string>

</resources>



