<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewPopUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mycolor"
            android:textSize="18sp"
            android:text="@string/oPlusTitle" />



        <EditText
            android:id="@+id/editTextOtherPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/oPlusAmt"
            android:inputType="number"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textViewPopupAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/alert"
            android:gravity="center"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/editTextOtherPlusNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:maxLength="80"
            android:hint="@string/plusNote"
            android:inputType="textMultiLine"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp" />
        <Button
            android:id="@+id/buttonOtherPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_bg"
            android:text="@string/oPlusBtn"
            android:textColor="#fff" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>