<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textViewOdetailsAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oDetailsAmount"
                android:textColor="@color/mycolor"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewOdetailsBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oDetailsBalance"
                android:textColor="@color/mycolor"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/textViewOdetailsNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oDetailsNote"
                android:textColor="@color/mycolor"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewOdetailsDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="end"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>
